# maude

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO.md  build  config.h.in  configure  configure.ac  win-build.sh
contrib/: Makefile
contrib/media/: citations.bib  narrowing-modulo-t.md
contrib/papers/: references.md
contrib/scripts/: cut-rltool  file-deps  merge-pr  test-load
contrib/systems/: bank-account.maude  caut.maude  nim.maude  psising-maudel.maude
contrib/systems.md/: bakery.md  bank-account.md  bitswap.md  choice.md  cycle.md  dijkstra.md  imp.md  oc.md  psising-maudel.md  qlock.md  rw.md  thermostat.md  token.md  vending.md
src/: Makefile.am  Makefile.in
src/ACU_Theory/: ACU_DagNode.cc  ACU_Symbol.cc  ACU_Symbol.hh  ChangeLog
src/BuiltIn/: ChangeLog  bindingMacros.hh  floatOpSymbol.cc  stringOpSymbol.cc  stringOpSymbol.hh  terminationCheckerSymbol.cc  terminationCheckerSymbol.hh
src/Core/: ChangeLog  freshVariableGenerator.hh  module.cc  rewritingContext.cc  rewritingContext.hh  run.cc  unificationContext.hh
src/Higher/: ChangeLog  narrowingFolder.cc  narrowingFolder.hh  narrowingSearchState2.cc  (+23 more)
tests/: maude-test-wrapper  test.Makefile
tests/Meta/: Makefile.am  Makefile.in  metaApply.maude  metaFrewrite.maude  metaGetVariant.maude  metaIntParse.expected  metaIntParse.maude  metaIntPrelude.expected  metaIntPrelude.maude  metaIntPrint.expected  metaIntPrint.maude  metaIntReplace.expected  metaIntReplace.maude  metaIntReplace2.expected  metaIntReplace2.maude  metaIntSort.expected  metaIntSort.maude  metaMatch.maude  metaMeta.maude  metaMetadata.maude  metaModExp.maude  metaModule.maude  metaNarrow.maude  metaParse.maude  metaPolymorph.maude  metaPrettyPrint.maude  metaPrintAttr.maude  metaReduce.maude  metaRewrite.maude  metaSearch.maude  metaSort.maude  metaSpecial.maude  metaTerm.maude  metaUnify.maude  metaUp.expected  metaUp.maude  metaUp2.expected  metaUp2.maude  metaUpDown.maude  metaUpModExp.expected  (+9 more)
tests/Misc/: CU_Unification.maude  Makefile.am  Makefile.in  assocUnification.maude  attributes.maude  bubble.expected  bubble.maude  commands.expected  commands.maude  continue.maude  dataStructures.maude  debug.maude  dekker.maude  diophantine.maude  meseguerFiniteVariant.maude  narrow.maude  parameterization.maude  renaming.expected  renaming.maude  smtTest  smtTest.maude  sreduce.maude  unification.maude  unification2.maude  unification3.maude  variantNarrowing.maude  variantUnification.maude
tests/ResolvedBugs/: CUIbug12-22-09.maude  Makefile.am  Makefile.in  metaApplyNov2018.expected  metaIntAscentJune2018.expected  metaIntAscentJune2018.maude  metaIntImportJune2018.expected  metaIntImportJune2018.maude  metaIntMatchOct2018.expected  metaIntRewriteJune2018.expected  metaIntRewriteJune2018.maude  metaModuleCacheJune2018.expected  metaModuleCacheJune2018.maude  paco10-6-09.maude  santiago11-2-09.maude  santiago9-21-09.maude  showModuleJune2018.expected  showModuleJune2018.maude  staleViewJune2018.expected  traian8-12-09.maude  unificationMar2013.maude
tests/systems/: Makefile.am  bakery.expected  bakery.maude  bank-account.expected  bank-account.maude  bitswap.expected  bitswap.maude  cash-sim.rtmaude  caut.maude  choice.maude  cycle.maude  dijkstra.maude  imp.expected  imp.maude  nim.maude  oc.maude  psising-maudel  psising-maudel.expected  psising-maudel.maude  qlock.maude  rw.maude  thermostat.expected  thermostat.maude  token.maude  vending.maude
tests/systems/nelson-oppen/: Makefile.am  hereditarily-finite-set.check  hereditarily-finite-set.expected  integer-list.check  integer-list.expected  matrix.check  matrix.expected
tests/tools/base/: Makefile.am  file.maude  full-maude.maude  linear.maude  machine-int.maude  metaInterpreter.maude  model-checker.maude  prelude-aux.maude  prelude.maude  preludeTests.expected  preludeTests.maude  smt.maude  socket.maude  term-order.maude
tests/tools/itp/: Makefile.am  bintree  bintree.maude  clavel-searchtree  clavel-searchtree.maude  list  list.maude  miguel-searchtree  miguel-searchtree.maude  ordlist  ordlist.maude  searchtree  searchtree.maude  stack  stack.maude  tree  tree.maude
tests/tools/lmc/: Makefile.am  bakery.expected  bakery.maude  bank-account.expected  bank-account.maude  lgraph-search.expected  lgraph-search.maude  list-sort.maude  thermostat.expected  thermostat.maude  token.expected  token.maude
tests/tools/lmc/ltlr/: Makefile.am  brp-ltlr  brp-ltlr.expected  brp-ltlr.maude  client-server  client-server.expected  client-server.maude  context  context.expected  context.maude  dekker  dekker.expected  dekker.maude  philo-dynamic  philo-dynamic.expected  philo-dynamic.maude  simple-dp  simple-dp.expected  simple-dp.maude  sk2-2  sk2-2.expected  sk2-2.maude  swp  swp.expected  swp.maude  unordered-channel  unordered-channel.expected  unordered-channel.maude
tests/tools/lmc/symbolic/: Makefile.am  bakery  bakery.expected  bakery.maude  bank-account  bank-account.expected  bank-account.maude  dijkstra-mutex  dijkstra-mutex.expected  dijkstra-mutex.maude  rw  rw-shared  rw-shared.expected  rw-shared.maude  rw.expected  rw.maude  symbolic-checker  symbolic-checker.expected  symbolic-checker.maude  token-mutex  token-mutex.expected  token-mutex.maude  vending  vending.expected  vending.maude
tests/tools/meta/: Makefile.am  cterms.expected  cterms.maude  eqform.expected  eqform.maude  kind-ops.maude  mconstruction  mconstruction.expected  mconstruction.maude  meta-aux.maude  mtemplate.expected  mtemplate.maude  mtransform.expected  mtransform.maude  narrowing.expected  narrowing.maude  nelson-oppen-combination  nelson-oppen-combination.expected  nelson-oppen-combination.maude  purification.expected  purification.maude  sort-ops  sort-ops.expected  sort-ops.maude  structured-names.expected  structured-names.maude  terms.expected  terms.maude  unsortify.maude  variables.maude
tests/tools/meta/nelson-oppen/: hereditarily-finite-set.maude  integer-list.check  integer-list.maude  lexical-trichotomy-law.maude  matrix.check  matrix.maude
(+440 files in other folders)
