include ../test.Makefile

TESTS = \
	metaApply.maude \
	metaUnify.maude \
	metaFrewrite.maude \
	metaMatch.maude \
	metaMeta.maude \
	metaModule.maude \
	metaParse.maude \
	metaPrettyPrint.maude \
	metaReduce.maude \
	metaRewrite.maude \
	metaSearch.maude \
	metaSort.maude \
	metaSpecial.maude \
	metaTerm.maude \
	metaUp.maude \
	metaWellFormed.maude \
	metaXapply.maude \
	metaXmatch.maude \
	metaUp2.maude \
	metaUpModExp.maude \
	metaModExp.maude \
	metaPolymorph.maude \
	metaUpDown.maude \
	metaPrintAttr.maude \
	metaMetadata.maude \
	metaVariantUnify.maude \
	metaGetVariant.maude \
	metaNarrow.maude \
	metaIntPrelude.maude \
	metaIntReplace.maude \
	metaIntReplace2.maude \
	russianDollsFlat.maude \
	russianDollsNonFlat.maude \
	metaIntMatch.maude \
	metaIntSearch.maude \
	metaIntSort.maude \
	metaIntUnify.maude \
	metaIntVariant.maude \
	metaIntVariantUnify.maude \
	metaIntPrint.maude \
	metaIntParse.maude

RESULT_FILES = \
	metaApply.expected \
	metaUnify.expected \
	metaFrewrite.expected \
	metaApply.expected \
	metaFrewrite.expected \
	metaMatch.expected \
	metaMeta.expected \
	metaModule.expected \
	metaParse.expected \
	metaPrettyPrint.expected \
	metaReduce.expected \
	metaRewrite.expected \
	metaSearch.expected \
	metaSort.expected \
	metaSpecial.expected \
	metaTerm.expected \
	metaUp.expected \
	metaWellFormed.expected \
	metaXapply.expected \
	metaXmatch.expected \
	metaUp2.expected \
	metaUpModExp.expected \
	metaModExp.expected \
	metaPolymorph.expected \
	metaUpDown.expected \
	metaPrintAttr.expected \
	metaMetadata.expected \
	metaVariantUnify.expected \
	metaGetVariant.expected \
	metaNarrow.expected \
	metaIntPrelude.expected \
	metaIntReplace.expected \
	metaIntReplace2.expected \
	russianDollsFlat.expected \
	russianDollsNonFlat.expected \
	metaIntMatch.expected \
	metaIntSearch.expected \
	metaIntSort.expected \
	metaIntUnify.expected \
	metaIntVariant.expected \
	metaIntVariantUnify.expected \
	metaIntPrint.expected \
	metaIntParse.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
