include ../test.Makefile

TESTS = \
	view.maude \
	dekker.maude \
	commands.maude \
	debug.maude \
	renaming.maude \
	dataStructures.maude \
	parameterization.maude \
	unification.maude \
	unification2.maude \
	unification3.maude \
	attributes.maude \
	diophantine.maude \
	variantUnification.maude \
	variantNarrowing.maude \
	meseguerFiniteVariant.maude \
	CU_Unification.maude \
	assocUnification.maude \
	sreduce.maude \
	narrow.maude \
	continue.maude \
	parse.maude \
	bubble.maude \
	rot13.maude

RESULT_FILES = \
	view.expected \
	dekker.expected \
	commands.expected \
	debug.expected \
	renaming.expected \
	dataStructures.expected \
	parameterization.expected \
	unification.expected \
	unification2.expected \
	unification3.expected \
	attributes.expected \
	diophantine.expected \
	variantUnification.expected \
	variantNarrowing.expected \
	meseguerFiniteVariant.expected \
	CU_Unification.expected \
	assocUnification.expected \
	sreduce.expected \
	smtTest.expected \
	narrow.expected \
	continue.expected \
	parse.expected \
	bubble.expected \
	rot13.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
