include ../test.Makefile

TESTS = \
	CUIbug12-22-09.maude \
	unificationMar2013.maude \
	parserJune2018.maude \
	staleViewJune2018.maude \
	showModuleJune2018.maude \
	clearRulesJune2018.maude \
	metaIntRewriteJune2018.maude \
	metaModuleCacheJune2018.maude \
	metaIntImportJune2018.maude \
	metaIntAscentJune2018.maude \
	objectMessageOct2018.maude \
	metaIntMatchOct2018.maude \
	physArgIndexOct2018.maude

RESULT_FILES = \
	CUIbug12-22-09.expected \
	unificationMar2013.expected \
	parserJune2018.expected \
	staleViewJune2018.expected \
	showModuleJune2018.expected \
	clearRulesJune2018.expected \
	metaIntRewriteJune2018.expected \
	metaModuleCacheJune2018.expected \
	metaIntImportJune2018.expected \
	metaIntAscentJune2018.expected \
	objectMessageOct2018.expected \
	metaIntMatchOct2018.expected \
	physArgIndexOct2018.expected


EXTRA_DIST = $(TESTS) $(RESULT_FILES)
