TESTS = \
	nim \
	bank-account \
	bakery \
	imp \
	caut \
	psising-maudel

MAUDE_FILES = \
	nim.maude \
	bank-account.maude \
	bakery.maude \
	imp.maude \
	caut.maude \
	psising-maudel.maude

RESULT_FILES = \
	nim.expected \
	bank-account.expected \
	bakery.expected \
	imp.expected \
	caut.expected \
	psising-maudel.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
