include ../test.Makefile

SUBDIRS = nelson-oppen

TESTS = \
	nim.maude \
	bank-account.maude \
	bakery.maude \
	imp.maude \
	caut.maude \
	qlock.maude \
	rw.maude \
	bitswap.maude \
	token.maude \
	choice.maude \
	cycle.maude \
	oc.maude \
	vending.maude \
	dijkstra.maude \
	thermostat.maude

RESULT_FILES = \
	nim.expected \
	bank-account.expected \
	bakery.expected \
	imp.expected \
	caut.expected \
	qlock.expected \
	rw.expected \
	bitswap.expected \
	token.expected \
	choice.expected \
	cycle.expected \
	oc.expected \
	vending.expected \
	dijkstra.expected \
	thermostat.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
