include ../../test.Makefile

TESTS = \
	file.maude \
	full-maude.maude \
	linear.maude \
	machine-int.maude \
	metaInterpreter.maude \
	model-checker.maude \
	prelude-aux.maude \
	prelude.maude \
	preludeTests.maude \
	smt.maude \
	socket.maude \
	term-order.maude

RESULT_FILES = \
	file.expected \
	full-maude.expected \
	linear.expected \
	machine-int.expected \
	metaInterpreter.expected \
	model-checker.expected \
	prelude-aux.expected \
	prelude.expected \
	preludeTests.expected \
	smt.expected \
	socket.expected \
	term-order.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
