TESTS = \
	bintree \
	clavel-searchtree \
	list \
	miguel-searchtree \
	ordlist \
	searchtree \
	stack \
	tree

MAUDE_FILES = \
	bintree.maude \
	clavel-searchtree.maude \
	list.maude \
	miguel-searchtree.maude \
	ordlist.maude \
	searchtree.maude \
	stack.maude \
	tree.maude

RESULT_FILES = \
	bintree.expected \
	clavel-searchtree.expected \
	list.expected \
	miguel-searchtree.expected \
	ordlist.expected \
	searchtree.expected \
	stack.expected \
	tree.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
