include ../../test.Makefile

TESTS = \
	bakery.maude \
	bank-account.maude \
	lgraph-search.maude \
	list-sort.maude \
	lmc.maude \
	thermostat.maude \
	token.maude

RESULT_FILES = \
	bakery.expected \
	bank-account.expected \
	lgraph-search.expected \
	list-sort.expected \
	lmc.expected \
	thermostat.expected \
	token.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
