include ../../test.Makefile

TESTS = \
	structured-names.maude \
	cterms.maude \
	terms.maude \
	foform.maude \
	eqform.maude \
	mtemplate.maude \
	mtransform.maude \
	mconstruction.maude \
	sort-ops.maude \
	unification.maude \
	variables.maude \
	narrowing.maude \
	purification.maude

RESULT_FILES = \
	structured-names.expected \
	cterms.expected \
	terms.expected \
	foform.expected \
	eqform.expected \
	mtemplate.expected \
	mtransform.expected \
	mconstruction.expected \
	sort-ops.expected \
	unification.expected \
	variables.expected \
	narrowing.expected \
	purification.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
