include ../../test.Makefile

TESTS = \
	metalevel-ext.maude \
	structured-names.maude \
	cterms.maude \
	foform.maude \
	eqform.maude \
	mtemplate.maude \
	mtransform.maude \
	mconstruction.maude \
	sort-ops.maude \
	unification.maude \
	variables.maude \
	narrowing.maude

RESULT_FILES = \
	metalevel-ext.expected \
	structured-names.expected \
	cterms.expected \
	foform.expected \
	eqform.expected \
	mtemplate.expected \
	mtransform.expected \
	mconstruction.expected \
	sort-ops.expected \
	unification.expected \
	variables.expected \
	narrowing.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
