include ../../test.Makefile

TESTS = \
	structured-names.maude \
	cterms.maude \
	terms.maude \
	foform.maude \
	eqform.maude \
	meta-aux.maude \
	mtemplate.maude \
	mtransform.maude \
	mconstruction.maude \
	nelson-oppen-combination.maude \
	nelson-oppen/hereditarily-finite-set.maude \
	nelson-oppen/integer-list.maude \
	nelson-oppen/lexical-trichotomy-law.maude \
	nelson-oppen/matrix.maude \
	sort-ops.maude \
	unification.maude \
	variables.maude \
	narrowing.maude \
	purification.maude

RESULT_FILES = \
	structured-names.expected \
	cterms.expected \
	terms.expected \
	foform.expected \
	eqform.expected \
	meta-aux.expected \
	mtemplate.expected \
	mtransform.expected \
	mconstruction.expected \
	nelson-oppen-combination.expected \
	nelson-oppen/hereditarily-finite-set.expected \
	nelson-oppen/integer-list.expected \
	nelson-oppen/lexical-trichotomy-law.expected \
	nelson-oppen/matrix.expected \
	sort-ops.expected \
	unification.expected \
	variables.expected \
	narrowing.expected \
	purification.expected

EXTRA_DIST = $(TESTS) $(RESULT_FILES)
