TESTS = \
	symbolic-checker \
	bakery \
	dijkstra-mutex \
	rw-shared \
	rw \
	token-mutex \
	vending \
	bank-account

MAUDE_FILES = \
	symbolic-checker.maude \
	bakery.maude \
	dijkstra-mutex.maude \
	rw-shared.maude \
	rw.maude \
	token-mutex.maude \
	vending.maude \
	bank-account.maude

RESULT_FILES = \
	symbolic-checker.expected \
	bakery.expected \
	dijkstra-mutex.expected \
	rw-shared.expected \
	rw.expected \
	token-mutex.expected \
	vending.expected \
	bank-account.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
